[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/transition_anim/transit_1-Sheet.png" type="Texture" id=1]
[ext_resource path="res://other/color_swap.tres" type="Material" id=2]
[ext_resource path="res://scripts/levels/transit_scene.gd" type="Script" id=3]
[ext_resource path="res://other/level_complete2.tres" type="Animation" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "level_complete"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "level_complete3"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "level_complete"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "level_complete2"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=10]
resource_name = "level_complete3"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "level_complete"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=14]
resource_name = "level_complete2"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=15]
resource_name = "level_complete3"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/Transit1-Sheet/Transit1-Sheet3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="transit_scene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Transit1-Sheet" type="TextureRect" parent="CenterContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 58.0
margin_right = 320.0
margin_bottom = 122.0
texture = ExtResource( 1 )

[node name="Transit1-Sheet" type="Sprite" parent="CenterContainer/Transit1-Sheet"]
material = ExtResource( 2 )
position = Vector2( 160, 32 )
texture = ExtResource( 1 )
hframes = 5
frame = 1

[node name="Transit1-Sheet3" type="Sprite" parent="CenterContainer/Transit1-Sheet"]
material = ExtResource( 2 )
position = Vector2( 224, 32 )
texture = ExtResource( 1 )
hframes = 5
frame = 1

[node name="Transit1-Sheet2" type="Sprite" parent="CenterContainer/Transit1-Sheet"]
material = ExtResource( 2 )
position = Vector2( 96, 32 )
texture = ExtResource( 1 )
hframes = 5
frame = 1

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
material = ExtResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelComplete_1" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 5 )
anims/level_complete = SubResource( 2 )
anims/level_complete2 = ExtResource( 4 )
anims/level_complete3 = SubResource( 4 )

[node name="LevelComplete_2" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/fade_in = SubResource( 7 )
anims/level_complete = SubResource( 8 )
anims/level_complete2 = SubResource( 9 )
anims/level_complete3 = SubResource( 10 )

[node name="LevelComplete_3" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/fade_in = SubResource( 12 )
anims/level_complete = SubResource( 13 )
anims/level_complete2 = SubResource( 14 )
anims/level_complete3 = SubResource( 15 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[connection signal="animation_finished" from="LevelComplete_1" to="." method="_on_LevelComplete_1_animation_finished"]
[connection signal="animation_finished" from="LevelComplete_2" to="." method="_on_LevelComplete_1_animation_finished"]
[connection signal="animation_finished" from="LevelComplete_3" to="." method="_on_LevelComplete_1_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
